Files commited by wflow_commit.

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -7,6 +7,13 @@ output:
 
 This repo is my "catch-all" for putting things in that may relate to various ongoing projects.
 
+
+# Ash
+
+* [Null simulations with larger n=13500](ash_pi0_largern.html)
+
+# Mouthwash
+
 * [Looking at how Mouthwash deals with t distributions vs normal](vicar_t.html)
 
 [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm
