workflowr::wflow_publish("cov_udi_explore.Rmd")

--- a/analysis/cov_udi_explore.Rmd
+++ b/analysis/cov_udi_explore.Rmd
@@ -124,7 +124,7 @@ Now check the mashr version:
 ```{r mashr_version}
 library("mashr")
 data = set_mash_data(z,1,V)
-Ulist = list(null= mashr:::cov_all_zeros(data), all = cov_udi(data,c("D","D","D","D","D","D")))
+Ulist = c(list(null= mashr:::cov_all_zeros(data)),cov_udi(data,c("D","D","D","D","D","D")))
 temp = calc_lik_matrix(data,Ulist,log=TRUE)
 plot(temp[,2]-temp[,1],lbf1,xlab="mash lBF",ylab="original lBF (n=1000)")
 abline(a=0,b=1,col=2)
@@ -143,7 +143,7 @@ DD = c(F,F,T,T,T,T)
 lbf=logBF.fromZ(z,V,rep(f,p),UU,DD,n=10000,m=0,sigmaa=sqrt(1/(2*f*(1-f)*10000)))
 
 data = set_mash_data(z,1,V)
-Ulist = list(null= mashr:::cov_all_zeros(data), all = cov_udi(data,c("U","U","D","D","D","D")))
+Ulist = c(list(null= mashr:::cov_all_zeros(data)), cov_udi(data,c("U","U","D","D","D","D")))
 temp = calc_lik_matrix(data,Ulist,log=TRUE)
 plot(temp[,2]-temp[,1],lbf,xlab="mash lBF",ylab="original lBF (n=10k)")
 abline(a=0,b=1,col=2)
@@ -156,7 +156,7 @@ DD = c(T,T,F,F,T,T)
 lbf=logBF.fromZ(z,V,rep(f,p),UU,DD,n=10000,m=0,sigmaa=sqrt(1/(2*f*(1-f)*10000)))
 
 data = set_mash_data(z,1,V)
-Ulist = list(null= mashr:::cov_all_zeros(data), all = cov_udi(data,c("D","D","U","U","D","D")))
+Ulist = c(list(null= mashr:::cov_all_zeros(data)),  cov_udi(data,c("D","D","U","U","D","D")))
 temp = calc_lik_matrix(data,Ulist,log=TRUE)
 plot(temp[,2]-temp[,1],lbf,xlab="mash lBF",ylab="original lBF (n=10k)")
 abline(a=0,b=1,col=2)
@@ -170,7 +170,7 @@ DD = c(F,T,F,F,T,F)
 lbf=logBF.fromZ(z,V,rep(f,p),UU,DD,n=10000,m=0,sigmaa=sqrt(1/(2*f*(1-f)*10000)))
 
 data = set_mash_data(z,1,V)
-Ulist = list(null= mashr:::cov_all_zeros(data), all = cov_udi(data,c("I","D","U","U","D","I")))
+Ulist = c(list(null= mashr:::cov_all_zeros(data)),  cov_udi(data,c("I","D","U","U","D","I")))
 temp = calc_lik_matrix(data,Ulist,log=TRUE)
 plot(temp[,2]-temp[,1],lbf,xlab="mash lBF",ylab="original lBF (n=10k)")
 abline(a=0,b=1,col=2)
@@ -184,7 +184,7 @@ DD = c(T,T,T,F,F,F)
 lbf=logBF.fromZ(z,V,rep(f,p),UU,DD,n=10000,m=0,sigmaa=sqrt(1/(2*f*(1-f)*10000)))
 
 data = set_mash_data(z,1,V)
-Ulist = list(null= mashr:::cov_all_zeros(data), all = cov_udi(data,c("D","D","D","I","I","I")))
+Ulist = c(list(null= mashr:::cov_all_zeros(data)),  cov_udi(data,c("D","D","D","I","I","I")))
 temp = calc_lik_matrix(data,Ulist,log=TRUE)
 plot(temp[,2]-temp[,1],lbf,xlab="mash lBF",ylab="original lBF (n=10k)")
 abline(a=0,b=1,col=2)
@@ -197,7 +197,7 @@ DD = c(F,T,F,T,F,T)
 lbf=logBF.fromZ(z,V,rep(f,p),UU,DD,n=10000,m=0,sigmaa=sqrt(1/(2*f*(1-f)*10000)))
 
 data = set_mash_data(z,1,V)
-Ulist = list(null= mashr:::cov_all_zeros(data), all = cov_udi(data,c("I","D","I","D","I","D")))
+Ulist = c(list(null= mashr:::cov_all_zeros(data)),  cov_udi(data,c("I","D","I","D","I","D")))
 temp = calc_lik_matrix(data,Ulist,log=TRUE)
 plot(temp[,2]-temp[,1],lbf,xlab="mash lBF",ylab="original lBF (n=10k)")
 abline(a=0,b=1,col=2)
