--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -31,5 +31,11 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 
 * [Looking at differentiating the likelihood at the null](EBflash_1d.html)
 
+
+# Finemapping
+
+* [Comparison of varbvs and varbvsmix](FMO2.html)
+* [A simple approach to fine mapping](simple_mapping.html)
+
 [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm
 [rstudio]: https://www.rstudio.com/products/rstudio/download/preview/
