--- a/analysis/newVB.Rmd
+++ b/analysis/newVB.Rmd
@@ -136,9 +136,10 @@ new_varbvsnormupdate <- function (X, sigma, sa, xy, d, alpha0, mu0, Xr0) {
 # X is an n by p matrix of genotypes
 # Y a n vector of phenotypes
 # sa the variance of the prior on effect sizes (actually $\beta \sim N(0,sa sigma)$ where the residual variance sigma here is fixed to the variance of Y based on a small effect assumption.)
-fit = function(X,Y,sa=1,niter=100){
-  L = 5
-  sigma = var(Y)
+fit = function(X,Y,sa=1,sigma=NULL,niter=100,L=5){
+  if(is.null(sigma)){
+    sigma=var(Y)
+  } 
   p =ncol(X)
   xy = t(X) %*% Y
   d = colSums(X * X)
@@ -162,9 +163,59 @@ lfsr_fromfit = function(res){
 }
 
 #find how many variables in the 95% CI
-n_in_CI = function(res){
-   apply(res$alpha,1,function(x){sum(cumsum(sort(x,decreasing = TRUE))<0.95)+1})
+# x is a probability vector
+n_in_CI_x = function(x){
+  sum(cumsum(sort(x,decreasing = TRUE))<0.95)+1
 }
+
+# return binary vector indicating if each point is in CI
+# x is a probability vector
+in_CI_x = function(x){
+  n = n_in_CI_x(x)
+  o = order(x,decreasing=TRUE)
+  result = rep(0,length(x))
+  result[o[1:n]] = 1
+  return(result)
+}
+
+# Return binary matrix indicating which variables are in CI of each 
+# of effect
+in_CI = function(res){
+  t(apply(res$alpha,1,in_CI_x))
+}
+
+n_in_CI = function(res){
+  apply(res$alpha,1,n_in_CI_x)
+}
+
+# computes z score for association between each 
+# column of X and y
+calc_z = function(X,y){
+  z = rep(0,ncol(X))
+  for(i in 1:ncol(X)){
+    z[i] = summary(lm(y ~ X[,i]))$coeff[2,3]
+  }
+  return(z)
+}
+
+
+# plot p values of data and color in the 95% CIs
+# for simulated data, specify b = true effects (highlights in red)
+pplot = function(X,y,res,pos=NULL,b=NULL,CImax = 400,...){
+  z = calc_z(X,y)
+  zneg = -abs(z)
+  logp = log10(pnorm(zneg))
+  if(is.null(b)){b = rep(0,ncol(X))}
+  if(is.null(pos)){pos = 1:ncol(X)}
+  plot(pos,-logp,col="grey",xlab="",ylab="-log10(p)",...)
+  points(pos[b!=0],-logp[b!=0],col=2,pch=16)
+  for(i in 1:nrow(res$alpha)){
+    if(n_in_CI(res)[i]<CImax)
+      points(pos[which(in_CI(res)[i,]>0)],-logp[which(in_CI(res)[i,]>0)],col=i+2)
+  }
+  
+}
+
 ```
 
 # Null simulation
@@ -180,6 +231,7 @@ X = matrix(rnorm(n*p),nrow=n,ncol=p)
 res =fit(X,y,niter=100)
 n_in_CI(res)
 lfsr_fromfit(res)
+pplot(X,y,res,main="null simulation")
 ```
 
 
@@ -199,16 +251,53 @@ y = X %*% beta + rnorm(n)
 res =fit(X,y,niter=100)
 n_in_CI(res)
 lfsr_fromfit(res)
+pplot(X,y,res,main="simple simulation")
+```
+
+
+# Simulate with LD blocks
+
+We will simulate data with some "LD structure". b=3 blocks of p=10 variables,
+each correlated through some latent Z.
+The phenotype model is $Y = X_1+...+X_b + e$ where
+$X_1,\dots,X_b$ are each a member of a block, and $e$ is $N(0,sd)$.
+
+```{r}
+set.seed(1)
+simulate = function(n=100,p=10,b=3,sd=1){
+  Z = list()
+  X = list()
+  Y = list()
+  for(i in 1:b) Z[[i]] = rnorm(n)
+  for(i in 1:b) X[[i]] = Z[[i]] + matrix(rnorm(n*p),nrow=n)
+  for(i in 1:b) Y[[i]] = X[[i]][,1] 
+  
+  X = do.call(cbind,X) # bind columns of X and Y
+  Y = do.call(cbind,Y)
+  Y = rowSums(Y) # each of the betas is 1
+  
+  Y = Y + rnorm(n,sd = sd)
+  return(list(X=X,Y=Y))
+}
+d = simulate()
+```
+
+Now fit the model:
+```{r}
+res.LD =fit(d$X,d$Y,niter=100)
+n_in_CI(res.LD)
+lfsr_fromfit(res.LD)
+pplot(d$X,d$Y,res.LD,main="LD simulation",CImax=10)
 ```
 
 # Real data
 
 These are GTEX data from Thyroid.
 ```{r}
-d=readRDS("../data/Thyroid.FMO2.1Mb.RDS")
+d=readRDS("../data/Thyroid.FMO2.pm1Mb.RDS")
 storage.mode(d$X) <- "double"
 d$X <- d$X[,3501:4500]
-    
+pos <- d$pos[3501:4500]
 X = d$X
 y = d$y
 Z = d$Z
@@ -216,25 +305,29 @@ Xresid= X
 p =ncol(Xresid)
 for(i in 1:p){Xresid[,i] = lm(X[,i]~Z)$resid}
 yresid = lm(y~Z)$resid
-res =fit(Xresid,yresid,niter=100)
-n_in_CI(res)
-lfsr_fromfit(res)
+res.gtex =fit(Xresid,yresid,niter=100)
+n_in_CI(res.gtex)
+lfsr_fromfit(res.gtex)
+pplot(Xresid,yresid,res.gtex)
 ```
 
-Notice that only $l=2,\dots,4$ have small lfsr. So first one
-can probably be ignored. 
-Of the others, there are 3 eQTLs that are fairly well mapped
-(95% CI contains 5-18 SNPs) and one that is not all well mapped (204).
+Interestingly, the variable with smallest $p$ value is not in the CIs of the most confident eQTLs. It seems that when we control for the other hits, that
+variable is no longer that significant.
+
+Notice that only $l=2,\dots,5$ have small lfsr. So the first one can probably be ignored. 
+Of the others, there are 3 eQTLs that are fairly well mapped (95% CI contains 5-19 SNPs) and one that is not all well mapped (152).
 
 Here we pick out the top marker for each $L$ and look at the BFs.
 Also compare with the top markers found by `varbvs`.
 We see the BF for the top 4 markers is higher than those from varbvs,
 which is encouraging.
 ```{r}
-markers = colnames(Xresid)[apply(res$alpha,1,which.max)]
+#find top hits
+tophits = apply(res.gtex$alpha,1,which.max)
+markers = colnames(Xresid)[tophits]
 
-# varbvs, 1000 SNPs
-markers3 <- c("chr1_171168633_C_A_b38",
+# varbvs, top 4 SNPs:
+markers.varbvs<- c("chr1_171168633_C_A_b38",
               "chr1_171147265_C_A_b38",
               "chr1_171164750_C_A_b38",
               "chr1_171178589_C_T_b38")
@@ -252,7 +345,127 @@ return(-0.5*log10(det(invOmega)) + 0.5*log10(invOmega0) - p*log10(sigmaa) -(n/2)
 
 c(log10BF(Xresid[,markers], yresid,0.5),
 log10BF(Xresid[,markers[2:5]], yresid,0.5),
-log10BF(Xresid[,markers3], yresid,0.5))
+log10BF(Xresid[,markers[2:4]], yresid,0.5),
+log10BF(Xresid[,markers.varbvs], yresid,0.5))
+
+```
+
+
+## Simulations based on real data
+
+Here we take the real genotypes (actually the residuals after removing Z) from the data above, and simulate effects with the effect sizes
+matched to the 4 significant top SNPs identified above. 
+
+```{r}
+set.seed(1)
+p =ncol(Xresid)
+n = nrow(Xresid)
+b = rep(0,p)
+index = apply(res.gtex$alpha,1,which.max)[-1]
+b[index] = diag(res.gtex$mu[2:5,index])
+fitted = Xresid %*% b
+sigma = sqrt(var(yresid) - var(fitted))
+ysim = fitted + rnorm(n, 0, sigma)
+
+write_finemap_files = function(X,Y,dir,prefix){
+  dir = normalizePath(dir)
+  z = calc_z(X,Y)
+  n = length(Y)
+  write.table(z,file.path(dir,paste0(prefix,".z")),quote=F,col.names=F)
+  write.table(cor(Xresid),file.path(dir,paste0(prefix,".ld")),quote=F,col.names=F,row.names=FALSE)
+  write.table(t(c(0,0,0,1)),file.path(dir,paste0(prefix,".k")),quote=F,col.names=F,row.names=FALSE)
+  write("z;ld;snp;config;k;log;n-ind",file=file.path(dir,"data"))
+  write(paste(file.path(dir,paste0(prefix,".z")),
+              file.path(dir,paste0(prefix,".ld")),
+              file.path(dir,paste0(prefix,".snp")),
+              file.path(dir,paste0(prefix,".config")),
+              file.path(dir,paste0(prefix,".k")),
+              file.path(dir,paste0(prefix,".log")),
+              n,sep=";"),
+        file=file.path(dir,"data"),append=TRUE)
+}
+
+write_finemap_files(Xresid,ysim,"../data/finemap_data/fmo2.sim","fmo2.sim")
+
+system("~/finemap_v1.1_MacOSX/finemap --sss --in-files ../data/finemap_data/fmo2.sim/data --prior-k --n-iterations 1000000 --prior-std 0.4 --regions 1")
+
+#system("~/finemap_v1.1_MacOSX/finemap --sss --in-files ../data/finemap_data/fmo2.sim/data --n-iterations 1000000 --prior-std 0.4 --regions 1 --prob-tol 0.00001")
+
+# Wrote these files to send to William for DAP
+write.table(Xresid,"../data/finemap_data/fmo2.sim/Xresid.txt",quote=F,col.names=F,row.names=FALSE)
+write.table(ysim,"../data/finemap_data/fmo2.sim/ysim.txt",quote=F,col.names=F,row.names=FALSE)
+
+z = calc_z(Xresid,ysim)
+write.table(c("Zscore",z),"../data/paintor_data/fmo2.sim/fmo2.sim.z",quote=F,col.names=F,row.names=FALSE)
+write.table(cor(Xresid),"../data/paintor_data/fmo2.sim/fmo2.sim.ld",quote=F,col.names=F,row.names=FALSE)
+write.table(cor(Xresid[,1:99]),"../data/paintor_data/fmo2.sim/fmo2.sim.short.ld",quote=F,col.names=F,row.names=FALSE)
+write.table(rep(1,length(z)),"../data/paintor_data/fmo2.sim/fmo2.sim.annotations",quote=F,col.names=F,row.names=FALSE)
+
+res.sim = fit(Xresid,ysim,niter=100)
+n_in_CI(res.sim)
+lfsr_fromfit(res.sim)
+
+#try with sigma="true" sigma
+# res2.sim = fit(Xresid,ysim,sa=0.5,sigma=sigma^2,niter=100)
+# n_in_CI(res2.sim)
+# lfsr_fromfit(res2.sim)
+```
+
+Compare with p values
+```{r}
+pplot(Xresid,ysim,res.sim,pos,b,100)
+ci = list()
+for(i in 1:5){ci[[i]] = which(in_CI_x(res.sim$alpha[i,])>0)}
+
+pip.sim = colSums(res.sim$alpha)
+plot(pip.sim)
+which(b!=0)
+points(which(b!=0),pip.sim[which(b!=0)],col=2,pch=16)
+# compare with finemap results
+
+res.fm = read.table("../data/finemap_data/fmo2.sim/fmo2.sim.snp",header=TRUE,sep=" ")
+
+pip.fm = rep(0,1000)
+pip.fm[res.fm$index] = res.fm$snp_prob
+
+plot(pip.sim,pip.fm,xlab="PIP (proposed method)",ylab="PIP (FINEMAP)")
+points(pip.sim[which(b!=0)],pip.fm[which(b!=0)],col=2,pch=16)
+
+pip.p = read.table("~/PAINTOR_V3.0/myData/fmo2.sim.results",header=TRUE)[,2]
+plot(pip.p,pip.sim)
+points(pip.p[which(b!=0)],pip.sim[which(b!=0)],col=2,pch=16)
+
+
+```
+
+Compare log10BF. Note the top log10BF from finemap was
+33 (for a 4 marker model). Not sure what exactly explains the differences in BFs. (I haven't been careful about 
+making sure parameters are same across methods, but generally the BF is somewhat robust to that.)
+```{r}
+tophits = apply(res.sim$alpha,1,which.max)
+markers = colnames(Xresid)[tophits]
+log10BF(Xresid[,markers[1:3]],ysim,0.5)
+log10BF(Xresid[,markers[1:4]],ysim,0.5)
+```
+
+# Run on ACTN3 data
+
+```{r}
+d=readRDS("../data/Muscle_Skeletal.ACTN3.pm1Mb.RDS")
+storage.mode(d$X) <- "double"
+#d$X <- d$X[,3501:4500]
+    
+X = d$X
+y = d$y
+Z = d$Z
+Xresid= X
+p =ncol(Xresid)
+for(i in 1:p){Xresid[,i] = lm(X[,i]~Z)$resid}
+yresid = lm(y~Z)$resid
+res.actn3 =fit(Xresid,yresid,niter=100)
+n_in_CI(res.actn3)
+lfsr_fromfit(res.actn3)
+pplot(Xresid,yresid,res.actn3)
 ```
 
 
