--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -36,6 +36,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 
 * [Comparison of varbvs and varbvsmix](FMO2.html)
 * [A simple approach to fine mapping](simple_mapping.html)
+* [A new VB approach](newVB.html)
 
 [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm
 [rstudio]: https://www.rstudio.com/products/rstudio/download/preview/
