--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -31,6 +31,8 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 
 * [Looking at differentiating the likelihood at the null](EBflash_1d.html)
 
+* [Apply SSVD to GTEX data](ssvd_gtex.html)
+
 
 # Finemapping
 
