--- a/analysis/ebayes.mm.Rmd
+++ b/analysis/ebayes.mm.Rmd
@@ -32,16 +32,16 @@ for very fast EB procedures like EBayesThresh.
 Suppose $x_j = b_j + N(0,s_j^2)$
 and $b_j \sim \pi_0 \delta_0 + (1-\pi_0) DExp(a)$
 where $Dexp$ means the double exponential (Laplace)
-with mean $a$ (so rate parameter $1/a$).
+with rate $a$.
 
 Then the even moments of $b_j$ are
-$E(b_j^n) = (1-\pi_0) n! a^n$.
+$E(b_j^n) = (1-\pi_0) n! (1/a)^n$.
 
 Also, 2nd and 4th moments of $N(0,s_j^2)$ are
 $s_j^2$ and $3s_j^4$.
 
 Thus, second and 4th moments of $x_j$ are:
-$$E(x_j^2) = s_j^2 + 2(1-\pi_0)a^2$$
+$$E(x_j^2) = s_j^2 + 2(1-\pi_0)/a^2$$
 
 $$E(x_j^4) = 3s_j^4 + 24(1-\pi_0)a^4 + 6 s_j^2 [2(1-\pi_0)a^2] $$.
 
@@ -49,11 +49,11 @@ $$E(x_j^4) = 3s_j^4 + 24(1-\pi_0)a^4 + 6 s_j^2 [2(1-\pi_0)a^2] $$.
 Let $m_2 := E(x_j^2 - s_j^2)$ and 
 $m_4:= E(x_j^4 - 3s_j^4)$. Then
 
-$$E(m_2) = 2(1-\pi_0)a^2$$.
-$$E(m_4) = 24[(1-\pi_0)a^2] + 12s_j^2 (1-\pi_0)a^2$$
-$$= m_2 (12a^2 + 6s_j^2)$$
+$$E(m_2) = 2(1-\pi_0)/a^2$$.
+$$E(m_4) = 24[(1-\pi_0)/a^2] + 12s_j^2 (1-\pi_0)/a^2$$
+$$= m_2 (12/a^2 + 6s_j^2)$$
 So we can solve to give
-$$a^2 = (1/12) (m_4/m_2 - 6s_j^2)$$
+$$a^2 = 12/ (m_4/m_2 - 6s_j^2)$$
 
 OK, so I've been sloppy with subscripts on the $m_4$ and $m_2$... need to sort that out.
 
@@ -66,18 +66,18 @@ We we will try it with constant $s_j=1$.
   eb_mm = function(x,s){
     m4 = mean(x^4-3*s^4)
     m2 = mean(x^2-s^2)
-    a2 = ((m4/m2) - 6*mean(s^2))/12
-    pi0 = 1- m2/(2*a2)
+    a2 = 12/((m4/m2) - 6*mean(s^2))
+    pi0 = 1- a2*m2/2
     if(a2<0){a2=0; pi0=1}
-    if(pi0<0){pi0=0; a2 =m2/2}
-    if(pi0>1){pi0=1; a2 = NA}
+    if(pi0<0){pi0=0; a2 =2/m2}
+    if(pi0>1){pi0=1; a2 = 1}
     
     return(list(pi0=pi0,a=sqrt(a2)))
   }
   set.seed(1)
   n=100000
   e = rnorm(n)
-  b = rexp(n)
+  b = rexp(n,rate=2)
   x = b+e   
   eb_mm(x,1)
   EbayesThresh::wandafromx(x,1,FALSE)
@@ -87,17 +87,20 @@ We we will try it with constant $s_j=1$.
   x2 = b2 + e
   eb_mm(x2,1)
   EbayesThresh::wandafromx(x2,1,FALSE)
-  
+  EbayesThresh:::wandafromx.mle(x2,1)
 ```
 
 
-Try a case that is "nearly null"
+Try a case that is "nearly null". Note that here the original 
+Ebayesthresh approach based on the beta function is less accurate, presumably
+due to numeric issues.
 ```{r}
   b3 =b
   b3[1:(0.99*n)] = 0
   x3 = b3 + e
   eb_mm(x3,1)
   EbayesThresh::wandafromx(x3,1,FALSE)
+  EbayesThresh:::wandafromx.mle(x3,1)
 ```
 
 
