--- a/analysis/cov_udi_explore.Rmd
+++ b/analysis/cov_udi_explore.Rmd
@@ -2,27 +2,11 @@
 title: "Explorations of implementing the UDI framework in mash"
 author: "Matthew Stephens "
 date: 2017-06-25
-output: html_document
+output: workflowr::wflow_html
 ---
 
-<!-- The file analysis/chunks.R contains chunks that define default settings
-shared across the workflowr files. -->
-```{r read-chunk, include=FALSE, cache=FALSE}
-knitr::read_chunk("chunks.R")
-```
 
-<!-- Update knitr chunk options -->
-```{r knitr-opts-chunk, include=FALSE}
-```
 
-<!-- Insert the date the file was last updated -->
-```{r last-updated, echo=FALSE, results='asis'}
-```
-
-<!-- Insert the code version (Git commit SHA1) if Git repository exists and R
- package git2r is installed -->
-```{r code-version, echo=FALSE, results='asis'}
-```
 
 
 # Preliminary
@@ -205,8 +189,4 @@ abline(a=0,b=1,col=2)
 
 
 
-## Session information
 
-<!-- Insert the session information into the document -->
-```{r session-info}
-```
