--- a/analysis/vicar_t.Rmd
+++ b/analysis/vicar_t.Rmd
@@ -2,27 +2,11 @@
 title: "explore vicar package; t distribution"
 author: "Matthew Stephens"
 date: 2017-04-14
-output: html_document
+output: workflowr::wflow_html
 ---
 
-<!-- The file analysis/chunks.R contains chunks that define default settings
-shared across the workflowr files. -->
-```{r read-chunk, include=FALSE, cache=FALSE}
-knitr::read_chunk("chunks.R")
-```
 
-<!-- Update knitr chunk options -->
-```{r knitr-opts-chunk, include=FALSE}
-```
 
-<!-- Insert the date the file was last updated -->
-```{r last-updated, echo=FALSE, results='asis'}
-```
-
-<!-- Insert the code version (Git commit SHA1) if Git repository exists and R
- package git2r is installed -->
-```{r code-version, echo=FALSE, results='asis'}
-```
 
 # Background
 
@@ -85,10 +69,11 @@ bhat.m.norm.c$xi
 bhat.m.t4.c$xi
 ```
 
-
-
-## Session information
-
-<!-- Insert the session information into the document -->
-```{r session-info}
+What about trying the inflation penalty to help avoid it
+```{r}
+bhat.m.norm.c.pen = mouthwash_second_step(bhat,shat,a,lambda_seq = lambda_seq,a_seq = a_seq, b_seq=b_seq,mixing_dist = "uniform", likelihood="normal", scale_var = TRUE, var_inflate_pen = 1)
+bhat.m.norm.c.pen$xi
 ```
+
+
+
