--- a/analysis/EBflash_1d.Rmd
+++ b/analysis/EBflash_1d.Rmd
@@ -2,27 +2,11 @@
 title: "EB Flash, n=p=1"
 author: "Matthew Stephens"
 date: 2017-06-14
-output: html_document
+output: workflowr::wflow_html
 ---
 
-<!-- The file analysis/chunks.R contains chunks that define default settings
-shared across the workflowr files. -->
-```{r read-chunk, include=FALSE, cache=FALSE}
-knitr::read_chunk("chunks.R")
-```
 
-<!-- Update knitr chunk options -->
-```{r knitr-opts-chunk, include=FALSE}
-```
 
-<!-- Insert the date the file was last updated -->
-```{r last-updated, echo=FALSE, results='asis'}
-```
-
-<!-- Insert the code version (Git commit SHA1) if Git repository exists and R
- package git2r is installed -->
-```{r code-version, echo=FALSE, results='asis'}
-```
 
 # Background
 
@@ -64,8 +48,4 @@ plot(l[ss],f[ss])
 
 So we see the problem - indeed the posterior is approximated by this, but it looks just like the prior... So the ratio of the posterior to the prior will be 1.
 
-## Session information
 
-<!-- Insert the session information into the document -->
-```{r session-info}
-```
