--- a/analysis/flash_r1vsr0_conservative.Rmd
+++ b/analysis/flash_r1vsr0_conservative.Rmd
@@ -2,27 +2,11 @@
 title: "Simple illustration of issue with conservative behaviour of variational method"
 author: "Matthew Stephens"
 date: 2017-10-12
-output: html_document
+output: workflowr::wflow_html
 ---
 
-<!-- The file analysis/chunks.R contains chunks that define default settings
-shared across the workflowr files. -->
-```{r read-chunk, include=FALSE, cache=FALSE}
-knitr::read_chunk("chunks.R")
-```
 
-<!-- Update knitr chunk options -->
-```{r knitr-opts-chunk, include=FALSE}
-```
 
-<!-- Insert the date the file was last updated -->
-```{r last-updated, echo=FALSE, results='asis'}
-```
-
-<!-- Insert the code version (Git commit SHA1) if Git repository exists and R
- package git2r is installed -->
-```{r code-version, echo=FALSE, results='asis'}
-```
 
 ## Simple illustration
 
@@ -59,8 +43,4 @@ f2 = flash_r1(Y1,verbose=TRUE,var_type = "constant",nullcheck = FALSE)
 
 
 
-## Session information
 
-<!-- Insert the session information into the document -->
-```{r session-info}
-```
