--- a/analysis/newVB.Rmd
+++ b/analysis/newVB.Rmd
@@ -2,27 +2,11 @@
 title: "New attempt at VB"
 author: "Matthew Stephens"
 date: 2017-10-27
-output: html_document
+output: workflowr::wflow_html
 ---
 
-<!-- The file analysis/chunks.R contains chunks that define default settings
-shared across the workflowr files. -->
-```{r read-chunk, include=FALSE, cache=FALSE}
-knitr::read_chunk("chunks.R")
-```
 
-<!-- Update knitr chunk options -->
-```{r knitr-opts-chunk, include=FALSE}
-```
 
-<!-- Insert the date the file was last updated -->
-```{r last-updated, echo=FALSE, results='asis'}
-```
-
-<!-- Insert the code version (Git commit SHA1) if Git repository exists and R
- package git2r is installed -->
-```{r code-version, echo=FALSE, results='asis'}
-```
 
 # Outline
 
@@ -81,8 +65,6 @@ Lots to do:
 knitr::read_chunk("newVB.funcs.R")
 ```
 
-```{r newVB.funcs}
-```
 
 # Null simulation
 
@@ -392,8 +374,4 @@ pplot(Xresid,yresid,res.actn3)
 ```
 
 
-## Session information
 
-<!-- Insert the session information into the document -->
-```{r session-info}
-```
