--- a/analysis/rbc_zscore_mash.Rmd
+++ b/analysis/rbc_zscore_mash.Rmd
@@ -2,29 +2,12 @@
 title: "Apply mash to red blood cell traits"
 author: "Matthew Stephens"
 date: 2017-06-24
-output: html_document
+output: workflowr::wflow_html
 ---
 
-<!-- The file analysis/chunks.R contains chunks that define default settings
-shared across the workflowr files. -->
-```{r read-chunk, include=FALSE, cache=FALSE}
-knitr::read_chunk("chunks.R")
-```
 
-<!-- Update knitr chunk options -->
-```{r knitr-opts-chunk, include=FALSE}
-```
 
-<!-- Insert the date the file was last updated -->
-```{r last-updated, echo=FALSE, results='asis'}
-```
 
-<!-- Insert the code version (Git commit SHA1) if Git repository exists and R
- package git2r is installed -->
-```{r code-version, echo=FALSE, results='asis'}
-```
-
-<!-- Add your analysis here -->
 
 # Preparation
 
@@ -86,8 +69,4 @@ superheat::superheat(1*(lfsr<0.01),pretty.order.rows=TRUE, title ="heatmap of lf
 ```
 
 
-## Session information
 
-<!-- Insert the session information into the document -->
-```{r session-info}
-```
